# n_ZBrushPlugins

./: .gitignore  .gitmodules  README.md  n_ZBrushPlugins.sln
BooleanTopological/: BooleanTopologicalTest.cpp  CMakeLists.txt
BooleanTopological/BooleanTopological/: BooleanTopological.cpp  BooleanTopological.h  BooleanTopological.vcxproj  BooleanTopological.vcxproj.filters  CMakeLists.txt  read_OBJ.cpp  stdafx.h  write_OBJ.cpp
BooleanTopological/BooleanTopological/BooleanTopological.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BooleanTopological/BooleanTopological/BooleanTopological.xcodeproj/project.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
BooleanTopological/BooleanTopological/BooleanTopological.xcodeproj/xcuserdata/taka.xcuserdatad/xcschemes/: xcschememanagement.plist
BooleanTopological/BooleanTopologicalData/: ThicknessCheckerTest  libCGAL.13.dylib  libThicknessChecker.dylib  libboost_atomic-mt.dylib  libboost_date_time-mt.dylib  libboost_system-mt.dylib  libboost_thread-mt.dylib  libmpfr.6.dylib
BooleanTopological/BooleanTopologicalTest/: BooleanTopologicalTest.cpp  BooleanTopologicalTest.vcxproj  BooleanTopologicalTest.vcxproj.filters
BooleanTopological/BooleanTopologicalTest/BooleanTopologicalTest.xcodeproj/: project.pbxproj
BooleanTopological/BooleanTopologicalTest/BooleanTopologicalTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BooleanTopological/BooleanTopologicalTest/BooleanTopologicalTest.xcodeproj/xcuserdata/taka.xcuserdatad/xcschemes/: xcschememanagement.plist
ClearanceChecker/: CMakeLists.txt  ClearanceChecker.txt  ClearanceCheckerTest.cpp
ClearanceChecker/ClearanceChecker/: CMakeLists.txt  ClearanceChecker.cpp  ClearanceChecker.h  parseParams.cpp  read_OBJ.cpp  stdafx.h  write_OBJ.cpp
ClearanceChecker/release/: ClearanceChecker.zsc
ClearanceChecker/release/ClearanceCheckerData/: ClearanceChecker.lib
ExactUnion/: ExactUnion.txt  ExactUnion.zsc  ExactUnion64.sln
ExactUnion/ExactUnion/: ExactUnion.cpp  ExactUnion.vcxproj  ExactUnion.vcxproj.filters
ExactUnion/ExactUnion64/: ExactUnion64.cpp  ExactUnion64.vcxproj  ExactUnion64.vcxproj.filters  main.cpp  main.h
ExactUnion/ExactUnion64Test/: ExactUnion64Test.cpp  ExactUnion64Test.vcxproj  ExactUnion64Test.vcxproj.filters
ExactUnion/distribute/: ExactUnion.zsc
MagicaVoxelizer/: MagicaVoxelizer.txt  MagicaVoxelizer.zsc
MagicaVoxelizer/MagicaVoxelizer/: MagicaDeVoxelizer.cpp  MagicaVoxelChunk.cpp  MagicaVoxelizer.cpp  MagicaVoxelizer.h  MagicaVoxelizer.vcxproj  MagicaVoxelizer.vcxproj.filters  read_OBJ.cpp  stdafx.h  write_OBJ.cpp
MagicaVoxelizer/MagicaVoxelizer.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
MagicaVoxelizer/MagicaVoxelizer/MagicaVoxelizer.xcodeproj/project.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
MagicaVoxelizer/MagicaVoxelizer/MagicaVoxelizer.xcodeproj/xcuserdata/taka.xcuserdatad/xcschemes/: xcschememanagement.plist
MagicaVoxelizer/MagicaVoxelizerData/: MagicaVoxelizer.lib
MagicaVoxelizer/MagicaVoxelizerTest/: MagicaVoxelizerTest.cpp  MagicaVoxelizerTest.vcxproj  MagicaVoxelizerTest.vcxproj.filters
MagicaVoxelizer/MagicaVoxelizerTest/MagicaVoxelizerTest.xcodeproj/: project.pbxproj
MagicaVoxelizer/MagicaVoxelizerTest/MagicaVoxelizerTest.xcodeproj/project.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
MagicaVoxelizer/MagicaVoxelizerTest/MagicaVoxelizerTest.xcodeproj/xcshareddata/xcschemes/: MagicaVoxelizerTest.xcscheme
Sample/Sample/: Sample.cpp  Sample.h  Sample.vcxproj  Sample.vcxproj.filters  stdafx.h
Sample/SampleTest/: SampleTest.cpp  SampleTest.vcxproj  SampleTest.vcxproj.filters
ThicknessChecker/: CMakeLists.txt  ThicknessChecker.txt  ThicknessChecker.zsc  ThicknessCheckerTest.cpp  ThicknessChecker_2019.txt  ThicknessChecker_2019.zsc
ThicknessChecker/ThicknessChecker/: CGAL_SDF.cpp  CMakeLists.txt  ThicknessChecker.cpp  ThicknessChecker.h  ThicknessChecker.vcxproj  ThicknessChecker.vcxproj.filters  cppamp_SDF.cpp  cppamp_Util.cpp  cpu_SDF.cpp  kernel.cl  openCL_SDF.cpp  openCL_Util.cpp  parseParams.cpp  read_OBJ.cpp  stdafx.h  write_OBJ.cpp
ThicknessChecker/ThicknessChecker.xcworkspace/: contents.xcworkspacedata
ThicknessChecker/ThicknessChecker.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
ThicknessChecker/ThicknessChecker/ThicknessChecker.xcodeproj/: project.pbxproj
ThicknessChecker/ThicknessChecker/ThicknessChecker.xcodeproj/xcshareddata/xcschemes/: MagicaVoxelizer.xcscheme  ThicknessChecker.xcscheme
ThicknessChecker/ThicknessCheckerData/: ThicknessCheckerTest  libCGAL.13.dylib  libCGAL_Core.13.dylib  libThicknessChecker.dylib  libboost_chrono-mt.dylib  libboost_thread-mt.dylib  libgmp.10.dylib  libmpfr.6.dylib
ThicknessChecker/ThicknessCheckerData/lang/: ThicknessChecker_en.xml  ThicknessChecker_jp.xml
ThicknessChecker/ThicknessCheckerData_2019/: ThicknessChecker.lib
ThicknessChecker/ThicknessCheckerTest/: ThicknessCheckerTest.cpp  ThicknessCheckerTest.vcxproj  ThicknessCheckerTest.vcxproj.filters
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest.xcodeproj/project.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest/ThicknessCheckerTest/: main.cpp
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest/ThicknessCheckerTest.xcodeproj/: project.pbxproj
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest/ThicknessCheckerTest.xcodeproj/project.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
ThicknessChecker/ThicknessCheckerTest/ThicknessCheckerTest/ThicknessCheckerTest.xcodeproj/xcuserdata/taka.xcuserdatad/xcschemes/: xcschememanagement.plist
n_ZBrushPlugins.xcworkspace/: contents.xcworkspacedata
n_ZBrushPlugins.xcworkspace/xcuserdata/taka.xcuserdatad/: UserInterfaceState.xcuserstate
(+1 files in other folders)
